[tool.poetry]
name = "aNc_pyRequest"
version = "1.0.0"
description = "Used to access Github's REST API and creates a YML file for JS processing"
authors = ["codyduong"]
license = "None"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
