[tool.poetry]
name = "anc_pyrequest"
version = "1.0.0"
description = "Used to create YML from a user's Github Repo's for processing by JS and displaying on a website"
authors = ["Cody Duong"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
